--- a/Gestures/app/src/main/res/layout/activity_main.xml
+++ b/Gestures/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,11 @@
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textSize="24sp"
-        tools:layout_editor_absoluteX="143dp"
-        tools:layout_editor_absoluteY="87dp"/>
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="87dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 </android.support.constraint.ConstraintLayout>
